[gd_scene load_steps=15 format=3 uid="uid://c17a72sjkkc8i"]

[ext_resource type="Script" uid="uid://dutykws7pje2q" path="res://src/unit/unit.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://f2itc0qaldrc" path="res://assets/world/0x72_DungeonTilesetII_v1.7.png" id="2_g1dw6"]
[ext_resource type="Script" uid="uid://c4i1eau3vyh77" path="res://src/components/state_machine.gd" id="4_mh547"]
[ext_resource type="Script" uid="uid://dbuhpejd75ot6" path="res://src/unit/state_move.gd" id="5_ct56y"]
[ext_resource type="Script" uid="uid://mbmw6mre32o2" path="res://src/unit/state_idle.gd" id="5_nh3ln"]
[ext_resource type="Script" uid="uid://dwibekwtbw3b" path="res://src/unit/state_attack.gd" id="7_fawgm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("2_g1dw6")
region = Rect2(128, 288, 144, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qnuv"]

[sub_resource type="Animation" id="Animation_w47c3"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StateMachine/Attack")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_attack_ended"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritesContainer/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6qnuv"]
resource_name = "DefaultAttack"

[sub_resource type="Animation" id="Animation_ct56y"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fawgm"]
resource_name = "Move"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritesContainer/Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(6, -3), Vector2(6, -6), Vector2(6, -4), Vector2(6, -3)]
}

[sub_resource type="Animation" id="Animation_nh3ln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesContainer/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritesContainer/Marker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fawgm"]
_data = {
&"Attack": SubResource("Animation_w47c3"),
&"DefaultAttack": SubResource("Animation_6qnuv"),
&"Idle": SubResource("Animation_ct56y"),
&"Move": SubResource("Animation_fawgm"),
&"RESET": SubResource("Animation_nh3ln")
}

[node name="Unit" type="Node2D"]
script = ExtResource("1_rkbax")
debug = true

[node name="SpritesContainer" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpritesContainer"]
position = Vector2(0, -12)
texture = SubResource("AtlasTexture_onrkg")
hframes = 9

[node name="Marker2D" type="Marker2D" parent="SpritesContainer"]
show_behind_parent = true
position = Vector2(6, -3)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_6qnuv")

[node name="SelectHighlight" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(-10, -19, 11, -19, 11, 5, -10, 5)
closed = true
width = 1.0
default_color = Color(0, 1, 0, 0.392157)

[node name="ControllerContainer" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_mh547")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_nh3ln")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("5_ct56y")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("7_fawgm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fawgm")
}

[connection signal="mouse_entered" from="Hurtbox" to="." method="_on_hurtbox_mouse_entered"]
[connection signal="mouse_exited" from="Hurtbox" to="." method="_on_hurtbox_mouse_exited"]
